--- a/docs/css/estilos.css
+++ b/docs/css/estilos.css
@@ -1,31 +1,47 @@
+:root{
+  --bgColor: rgb(136, 143, 172);
+  --bgSecondaryColor: rgb(40, 40, 41);
+  --primaryColor: rgba(26, 27, 29, 0.973);
+  --secondaryColor: rgba(247, 249, 253, 0.973);
+  --primaryFont: "Raleway", sans-serif;
+  --secondaryFont: "Bitter", serif;
+  --linkColor: rgb(131, 253, 161);
+  --hoverLinkColor: #ffffff;
+}
+
 html  {
-  background-color:rgb(136, 143, 172);
-  color: rgba(26, 27, 29, 0.973);
+  background-color: var(--bgColor);
+  color: var(--primaryColor);
   scroll-behavior: smooth;
   font-size: 16px;
-  font-family: "Raleway", sans-serif;
+  font-family: var(--primaryFont);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
 
 img,
-video{
+video, 
+iframe{
   max-width: 100%;
 }
 
+table{
+  width: 100%;
+}
+
 a {
-  color:rgb(131, 253, 161);
+  color: var(--linkColor);
   transition: all 0.5s ease-out;
 }
 
 a:hover {
-  color:rgb(255, 255, 255);
+  color: var(--hoverLinkColor);
 }
 
 #menu{ 
-  color:rgb(250, 251, 252);
-  background-color: rgba(72, 71, 73, 0.993);
+  background-color: var(--bgSecondaryColor);
+  color: var(--secondaryColor);
 }
 
 #menu li{
@@ -35,24 +51,42 @@ a:hover {
   font-size: 2rem;
 }
 
-#bordered-image{
-  border-radius:1rem;
-  border: 3px dotted red;
-  transition: all 1s ease-out;
-}
-#bordered-image:hover{
-  border-radius:5rem;
-  border: 5px dotted green;
-  filter: blur(0.5rem);
-  transform: rotate(360deg) scale(2) translate(200px,100px)
+#lista li{
+  transition: all 0.5s ease;
 }
 
+#lista li:hover{
+  font-size: 1.5rem;
+}
+
+#character-image{
+  border-radius: 100%;
+  transition: all 0.5s ease;
+}
+
+#character-image:hover{
+  transform: scale(2);
+}
+
+#poster-image{
+  border-radius:1rem;
+  transition: all 1s ease-out;
+}
+#poster-image:hover{
+  border-radius:1.5rem;
+  border: 3px dotted rgb(211, 241, 74);
+  transform: scale(1.5);
+}
 .text-right{
   text-align: right;
 }
 
 .text-center{
   text-align: center;
+}
+
+.text-left{
+  text-align: left;
 }
 
 .fs-20{
@@ -63,29 +97,58 @@ a:hover {
   font-size: 16px;
 }
 
-.rounded{
-  border-radius: 100%;
-}
-
-.sepia{
-  filter:sepia(1);
-}
-
-.gray-scale{
-  filter:grayscale(1);
-}
-
 .raleway-normal {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--primaryFont);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
 .raleway-bold {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--primaryFont);
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+}
+.raleway-bold-italic {
+  font-family: var(--primaryFont);
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.bitter-normal {
+  font-family: var(--secondaryFont);
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.bitter-bold {
+  font-family: var(--secondaryFont);
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.bg-white{
+  background-color: azure;
+}
+
+.bg-purple{
+  background-color: rgb(211, 176, 245);
+}
+
+.bg-title{
+  background-color: var(--bgSecondaryColor);
+}
+.color-title{
+  color: var(--secondaryColor);
+}
+.text-gray{
+  color:rgb(49, 49, 49);
+}
+.text-blue{
+  color:rgb(24, 24, 170);
 }
 
 .box{
@@ -105,3 +168,4 @@ a:hover {
 .d-none{
   display: none;
 }
+
