--- a/docs/css/estilos2.css
+++ b/docs/css/estilos2.css
@@ -2,8 +2,8 @@
   --primaryFont: "Raleway", sans-serif;
   --secondaryFont: "Bitter", serif;
 
-  --linkColor: rgb(131, 253, 161);
-  --hoverLinkColor: #ffffff;
+  --linkColor: rgb(74, 213, 255);
+  --hoverLinkColor: #cbc7ff;
 }
 
 html{
